# dicesuki

./: .env.development  .env.example  .env.production  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  MULTIPLAYER.md  README.md  bun.lockb  index.html  package-lock.json  package.json  playwright.config.ts  spec.md  tailwind.config.js  vercel.json  vite.config.ts
.claude/: CONTEXT_ORCHESTRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md
.claude/agents/: config_agent.md  frontend_agent.md  orchestrator.md  performance_agent.md  physics_agent.md  state_agent.md  testing_agent.md
.claude/commands/: orchestrate.md
.claude/orchestration/: AUTO_ROUTER_GUIDE.md  FIXES_SUMMARY.md  QUICK_REFERENCE.md  ZERO_MAINTENANCE_SOLUTION.md  agent_comms.py  always_on_context.md  auto_router.py  context_hub.py  contract_validators.py  handoff_protocol.md  interface_routing.py  test_auto_router.py  test_orchestration.py  token_estimator.py  validate.py  validation_rules.md
.claude/rules/: architecture.md
.github/: labels.yml
.github/workflows/: ci.yml  version-bump.yml
.serena/: project.yml
.serena/memories/: dice-twitch-bug-analysis.md
api/: og.js
claudedocs/: phase2-complete.md  phase3-panels-complete.md  theming-fixes.md  theming-implementation-summary.md  ui-layout-quick-reference.md  ui-theming-design.md
deployment/: README.md  setup-server.sh
docs/: ARTIST_PLATFORM_DESIGN.md  ARTIST_PLATFORM_README.md  IMPLEMENTATION_SUMMARY.md  INVENTORY_ARCHITECTURE.md  INVENTORY_IMPLEMENTATION_ROADMAP.md  context-map.md  systems-architecture-review.md
docs/adrs/: 000-template.md
docs/guides/: auth.md  changelog.md  collectible-catalog.md  custom-dice.md  debugging.md  deployment.md  discord.md  economy-contracts.md  git-workflow.md  haptic-feedback.md  imagegen-uv-dice.md  index.md  patterns.md  runtime-dice-assets.md  saved-rolls.md  server.md  tech-stack.md  testing.md
docs/plans/: 2026-02-12-dice-face-numbers.md  2026-02-15-multiplayer-01-rust-server-core.md  2026-02-15-multiplayer-03-websocket-networking.md  2026-02-15-multiplayer-05-client-scene.md  2026-02-15-multiplayer-07-integration-deployment.md  2026-02-15-multiplayer-drag-physics.md  2026-02-15-unified-ui-design.md
e2e/: cozy-forest-runtime.spec.ts  dice-faces-d10.spec.ts  dice-faces-d12.spec.ts  dice-faces-d20.spec.ts  dice-faces-d4.spec.ts  dice-faces-d6.spec.ts  dice-faces-d8.spec.ts  dice-faces.helpers.ts  dice-faces.spec.ts  local-loopback-room.spec.ts  production-dice-preview.spec.ts  solo-wasm-room.spec.ts
economy/disclosures/: 0001-broad-rarity-showcase.json
public/artist-resources/: README.md
public/dice/: README.md  manifest.json
scripts/: build-wasm-room.sh  catalog-edition-planner.js  catalog-edition-planner.test.ts  check-immutable-catalog-history.js  check-immutable-catalog-history.test.ts  check-immutable-economy-history.js  check-immutable-economy-history.test.ts  check-immutable-migration-history.js  check-immutable-migration-history.test.ts  economy-simulator.js  economy-simulator.test.ts  generate-brand-icons.mjs  generate-collectible-catalog.js  generate-collectible-catalog.test.ts  generate-dice-manifest.js  generate-economy-disclosures.js  generate-economy-disclosures.test.ts  generate-pwa-icons.js  test-supabase-postgres.mjs  test-wallet-ledger-postgres.mjs  validate-production-economy.js  validate-production-economy.test.ts  watch-dice-manifest.js
scripts/imagegen-uv/: blender_generate.py  canonical-dice-contract.mjs  canonical-validation.mjs  capture-d20-proof.mjs  capture-theme-workshop.mjs  check-authoring-boundary.mjs  check-canonical-history.mjs  continuous-d6.mjs  d20-mesh-template.mjs  derive-normal-map.mjs  derive-theme-normal-maps.mjs  dice-atlas.mjs  generate-authoring-kit.mjs  generate-theme-workshop.mjs  generate.mjs  imagegen-authoring.node-test.mjs  normal-map-utils.mjs  register-theme-atlases.mjs  theme-workshop-data.mjs  themed-dice-contract.mjs  validate-d20-mesh-template.mjs  validate-theme-atlas-registration.mjs  validate-themed-dice-contract.mjs  validate.mjs
scripts/production-dice-fixtures/: fixture-data.mjs  generate-themed-imagegen-sets.mjs  generate.mjs  imagegen-atlas-glb.mjs  themed-polyhedral-glb.mjs
scripts/runtime-dice-assets/: capture-thumbnails.mjs  optimize.mjs  runtime-asset-contract.mjs  runtime-asset-profiles.mjs  runtime-dice-assets.node-test.mjs  validate.mjs
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  render.yaml  tsconfig.json
server/core/: Cargo.toml
server/core-spike/: Cargo.toml
server/core-spike/src/: lib.rs
server/core/src/: config.rs  dice.rs  lib.rs  messages.rs  physics.rs  player.rs  room.rs  sink.rs
server/src/: auth.rs  config.ts  dice.rs  discord.rs  face_detection.rs  index.ts  lib.rs  main.rs  messages.rs  physics.rs  player.rs  registry.rs  roll_reporting.rs  room.rs  room_manager.rs  routes.rs  simulation.rs  supabase.rs  ws_handler.rs
server/src/network/: EventHandlers.ts  SocketServer.ts
server/src/physics/: DiceSimulator.ts  PhysicsWorld.ts
server/src/room/: RoomManager.ts
server/src/types/: index.ts
server/tests/: integration.rs  render_blueprint.rs
server/wasm/: Cargo.toml
server/wasm/src/: host.rs  lib.rs
src/: App.tsx  index.css  vite-env.d.ts
src/animations/: ui-transitions.ts
src/components/: DebugOverlay.tsx  DeviceMotionButton.test.tsx  DeviceMotionButton.tsx  DiceSelector.tsx  HamburgerMenu.tsx  ProductionDiceInitializer.test.tsx  ProductionDiceInitializer.tsx  RollButton.test.tsx  RollButton.tsx  Scene.tsx  SettingsButton.tsx  SoloRoom.test.tsx  SoloRoom.tsx  ThemeSelector.tsx
src/config/: arenaFit.test.ts  collectibleCatalogSource.json  craftingRecipes.ts  dieSets.ts  engineConfig.ts  physicsConfig.guard.test.ts  physicsConfig.ts  renderScale.test.ts  renderScale.ts  starterDice.test.ts  starterDice.ts
src/contexts/: DeviceMotionContext.tsx  DeviceMotionProvider.tsx  DiceBackendContext.tsx  DiceBackendProvider.tsx  ThemeContext.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx
src/hooks/: useAnimationMixer.ts  (+38 more)
supabase/: README.md
(+521 files in other folders)
