[package]
name = "dicesuki-server"
version = "0.1.0"
edition = "2021"
description = "Multiplayer dice physics server for Daisu"
license = "MIT"
repository = "https://github.com/donovan-yohan/daisu-app"
readme = "README.md"
keywords = ["dice", "multiplayer", "physics", "websocket"]
categories = ["games", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rapier3d = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
nanoid = "0.4"
rand = "0.8"
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
nalgebra = "0.33"
log = "0.4"
env_logger = "0.11"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

[profile.release]
opt-level = 3
lto = true
