# Cargo workspace (issue #112): the server is the root package; `dicesuki-core`
# (pure game engine, wasm-buildable) is a member at `core/`. Building/testing
# from `server/` covers both; `cargo build --release` still yields the server
# binary exactly as before.
[workspace]
# `core` = pure engine (dicesuki-core); `wasm` = the wasm-bindgen host that
# compiles that engine to an in-browser room worker (issue #113). `wasm` is a
# cdylib and is excluded from `default-members` so a bare `cargo test` from
# `server/` does not try to link the wasm crate against a non-wasm target's
# js-sys glue — build it explicitly via `npm run build:wasm-room`.
members = ["core", "wasm"]
# Make a bare `cargo build`/`cargo test` from `server/` cover the root server
# package AND the core crate (a root-package workspace otherwise defaults to the
# root package only). `cargo build --release` still targets the server binary.
# The `wasm` crate's native-target RoomHost unit tests are reached explicitly
# with `cargo test -p dicesuki-wasm`.
default-members = [".", "core"]

[package]
name = "dicesuki-server"
version = "0.1.0"
edition = "2021"
description = "Multiplayer dice physics server for Dicesuki"
license = "MIT"
repository = "https://github.com/donovan-yohan/daisu-app"
readme = "README.md"
keywords = ["dice", "multiplayer", "physics", "websocket"]
categories = ["games", "web-programming"]

[dependencies]
# Pure game engine (physics, dice, room sim, protocol, face detection).
dicesuki-core = { path = "core" }
tokio = { version = "1", features = ["full"] }
rapier3d = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
nanoid = "0.4"
rand = "0.8"
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
nalgebra = "0.33"
log = "0.4"
env_logger = "0.11"
# JWT verification against Supabase JWKS (ADR 006). jsonwebtoken is the de-facto
# standard Rust JWT crate: actively maintained, native JWKS support via
# `jwk::JwkSet` + `DecodingKey::from_jwk` (covers Supabase's asymmetric RSA/EC
# signing keys and HMAC test keys), and it reuses `ring` — already in the tree
# via rustls — instead of pulling OpenSSL like josekit would.
jsonwebtoken = "9"
# Runtime HTTP client for the Supabase JWKS fetch and the `rooms` registry
# heartbeat (REST upsert). Kept rustls-only (no OpenSSL) to match the static
# musl-friendly build; previously a dev-only dependency (integration tests).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }


[dev-dependencies]
base64 = "0.22.1"
tokio-tungstenite = "0.24"

[profile.release]
opt-level = 3
lto = true

# Size-first profile for the wasm room module (issue #113). Cargo profiles are
# workspace-global, so the wasm crate cannot carry its own `[profile.release]`;
# `npm run build:wasm-room` builds with `--profile wasm-release` to get an
# `opt-level = "z"` + LTO + stripped `.wasm` without shrinking the native
# server binary (which stays on `opt-level = 3` above).
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
strip = true
